src/test/deca/syntax/invalid/while_method.deca
//Description
//    Vérifier la géné de méthode dans un while
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 11

class A{

while(true){
void getX(){;}
}
}
